docs/api/qiskit-ibm-runtime/0.48/ibm-quantum-schemas-executor-version-1-1-samplex-item-model.mdx
---
title: SamplexItemModel (v0.48)
description: API reference for ibm_quantum_schemas.executor.version_1_1.SamplexItemModel in qiskit-ibm-runtime v0.48
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: ibm_quantum_schemas.executor.version_1_1.SamplexItemModel
---

<span id="ibm-quantum-schemas-executor-version-1-1-samplexitemmodel" />

# SamplexItemModel

<Class id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel" isDedicatedPage={true} github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.9.20260612/ibm_quantum_schemas/executor/version_1_1/models.py#L126-L155" signature="SamplexItemModel" modifiers="pydantic model">
  Bases: `BaseModel`

  Execution specifications for a single quantum circuit.

  The circuit for each item is store separately in `QuantumProgramModel`.

  ### chunk\_size

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.chunk_size" attributeTypeHint="Annotated[int, Field(ge" attributeValue="1)] | Literal['auto'] = 'auto'" modifiers="field">
    The maximum number circuit arguments to bind to the circuit per shot loop.

    When `"auto"`, the number is chosen server-side with heuristics designed to optimize execution speed. A quantum program must have items where either all chunk sizes are integer-valued, or all chunk sizes are `"auto"`. Integer values are only allowed inside of session exection mode.
  </Attribute>

  ### item\_type

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.item_type" attributeTypeHint="Literal['samplex']" attributeValue="'samplex'" modifiers="field">
    The type of quantum program item.
  </Attribute>

  ### samplex

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.samplex" attributeTypeHint="SamplexModel [Required]" attributeTypeHintHref="ibm-quantum-schemas-common-samplex-model" modifiers="field">
    A JSON-encoded samplex.
  </Attribute>

  ### samplex\_arguments

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.samplex_arguments" attributeTypeHint="dict[str, bool | int | PauliLindbladMapModel | TensorModel] [Required]" attributeTypeHintHref="ibm-quantum-schemas-common-pauli-lindblad-map-model" modifiers="field">
    Arguments to the samplex.
  </Attribute>

  ### shape

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.shape" attributeTypeHint="list[int] [Required]" modifiers="field">
    The shape of this item.

    This shape must extend (via broadcasting) the implicit shape of the :attr:\~samplex\_arguments\`. The non-trivial axes it introduces enumerate randomizations.
  </Attribute>
</Class>

