docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-executor-version-1-1-samplex-item-model.mdx
---
title: SamplexItemModel (v0.49)
description: API reference for ibm_quantum_schemas.executor.version_1_1.SamplexItemModel in qiskit-ibm-runtime v0.49
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: ibm_quantum_schemas.executor.version_1_1.SamplexItemModel
---

<span id="ibm-quantum-schemas-executor-version-1-1-samplexitemmodel" />

# SamplexItemModel

<Class id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel" isDedicatedPage={true} github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.10.20260723/ibm_quantum_schemas/executor/version_1_1/models.py#L126-L155" signature="SamplexItemModel" modifiers="pydantic model">
  Bases: `BaseModel`

  Execution specifications for a single quantum circuit.

  The circuit for each item is store separately in `QuantumProgramModel`.

  ### chunk\_size

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.chunk_size" modifiers="field">
    Type: `Annotated`\[`int`, `Field`(`ge``=``1`)] | `Literal`\[`'auto'`]

    Default value: `'auto'`

    The maximum number circuit arguments to bind to the circuit per shot loop.

    When `"auto"`, the number is chosen server-side with heuristics designed to optimize execution speed. A quantum program must have items where either all chunk sizes are integer-valued, or all chunk sizes are `"auto"`. Integer values are only allowed inside of session exection mode.
  </Attribute>

  ### item\_type

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.item_type" modifiers="field">
    Type: `Literal`\[`'samplex'`]

    Default value: `'samplex'`

    The type of quantum program item.
  </Attribute>

  ### samplex

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.samplex" modifiers="field">
    Type: [`SamplexModel`](ibm-quantum-schemas-common-samplex-model "ibm_quantum_schemas.common.SamplexModel")

    A JSON-encoded samplex.
  </Attribute>

  ### samplex\_arguments

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.samplex_arguments" modifiers="field">
    Type: `dict`\[`str`, `bool` | `int` | [`PauliLindbladMapModel`](ibm-quantum-schemas-common-pauli-lindblad-map-model "ibm_quantum_schemas.common.PauliLindbladMapModel") | [`TensorModel`](ibm-quantum-schemas-common-tensor-model "ibm_quantum_schemas.common.TensorModel")]

    Arguments to the samplex.
  </Attribute>

  ### shape

  <Attribute id="ibm_quantum_schemas.executor.version_1_1.SamplexItemModel.shape" modifiers="field">
    Type: `list`\[`int`]

    The shape of this item.

    This shape must extend (via broadcasting) the implicit shape of the :attr:\~samplex\_arguments\`. The non-trivial axes it introduces enumerate randomizations.
  </Attribute>
</Class>

